<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/argument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/argument_text"
            android:inputType="numberSigned|number|numberDecimal"
            android:textSize="@dimen/main_dim" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_text"
        android:textSize="@dimen/main_dim"
        app:layout_constraintStart_toStartOf="@id/buttonPlus"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus_text"
        android:textSize="@dimen/main_dim"
        app:layout_constraintEnd_toStartOf="@id/buttonMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus_text"
        android:textSize="@dimen/main_dim"
        app:layout_constraintEnd_toStartOf="@id/buttonMultiplication"
        app:layout_constraintStart_toEndOf="@id/buttonPlus"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMultiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi_text"
        android:textSize="@dimen/main_dim"
        app:layout_constraintEnd_toStartOf="@id/buttonDivide"
        app:layout_constraintStart_toEndOf="@id/buttonMinus"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide_text"
        android:textSize="@dimen/main_dim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonMultiplication"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textSize="@dimen/main_dim"
        app:layout_constraintStart_toStartOf="@id/buttonDivide"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

</androidx.constraintlayout.widget.ConstraintLayout>